---
source: tests/integration.rs
expression: output
---
Hello
x: 4.3
y: 5.3
z: 8.3
z: 7.3
y: function: test <22>
4.3
